--- a/style.css
+++ b/style.css
@@ -1,354 +1,783 @@
-:root {
-  --pale-violet: hsl(276, 100%, 81%);
-  --moderate-violet: hsl(276, 55%, 52%);
-  --desaturated-dark-violet: hsl(271, 15%, 43%);
-  --grayish-blue: hsl(206, 6%, 79%);
-  --very-dark-desaturated-violet: hsl(271, 36%, 24%);
-  --dark-grayish-violet: hsl(270, 7%, 64%);
-  --new: hsl(290, 37%, 97%);
-  --light-magenta: hsl(293, 100%, 63%);
-  --light-violet: hsl(264, 100%, 61%);
-  --white: hsl(0, 0%, 100%);
-  --light-grayish-violet: hsl(270, 20%, 96%);
-  --very-dark-desaturated-violet: hsl(271, 36%, 24%);
-  --very-light-magenta: hsl(289, 100%, 72%);
+* {
+    margin: 0;
+    padding: 0;
+    font-family: 'Rubik', sans-serif;
+    /* max-height: 800px; */
 }
 
-/* reset */
-*,
-*::after,
-*::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  overflow: hidden;
+body{
+  
 }
 
-body {
-  font-family: 'Rubik', sans-serif;
-  font-size: 16px;
-  color: var(--new);
-  height: 100vh;
-  width: auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+#content {
+    width: 100%;
+    height: 800px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: hsl(0, 0%, 100%);
+    justify-content: space-between;
+    overflow: hidden;
 }
 
-.nice-background {
-  content: '';
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 40rem;
-  width: 50vw;
 
-  background: linear-gradient(
-    240deg,
-    var(--light-magenta),
-    var(--light-violet)
-  );
-  z-index: -2;
-  border-bottom-right-radius: 25rem;
+.rec_radL {
+    position: absolute;
+    background-image: linear-gradient(hsl(293, 100%, 63%), hsl(264, 100%, 61%));
+    left: -69px;
+    height: 700px;
+    width: 490px;
+    border-radius: 0px 0px 400px 400px;
 }
 
-.nice-background-2 {
-  display: none;
+/*Phone*/
+#phone {
+    top: 150px;
+    left: 363px;
+    position: relative;
+    height: 490px;
+    width: 230px;
+    border: 10px solid hsl(0, 0%, 100%);
+    border-radius: 30px;
+    box-shadow: 18px 10px 70px hsl(268, 16%, 84%);
+    z-index: 1;
 }
 
-.container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  padding: 2rem;
+#phone>#screen {
+    background-color: hsl(270, 20%, 96%);
+    height: 490px;
+    width: 231px;
+    border-radius: 20px;
 }
 
-i:hover,
-.dot:hover {
-  cursor: pointer;
+#screen>#camFront {
+    position: relative;
+    bottom: 9px;
+    left: 54px;
+    width: 132px;
+    height: 28px;
+    background-color: hsl(0, 0%, 100%);
+    z-index: 1;
+    border-radius: 20px;
 }
 
-/* phone-part */
-.phone {
-  max-width: 270px;
-  background-color: var(--light-grayish-violet);
-  border: 0.5rem solid var(--white);
-  border-radius: 2rem;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.345);
+#toWalk {
+    position: relative;
+    bottom: 29px;
+    background-image: linear-gradient(to right, hsl(264, 100%, 61%), hsl(293, 100%, 63%));
+    height: 65px;
+    width: 231px;
+    border-radius: 20px 20px 0px 0px;
+    box-shadow: 0px 2px 10px rgba(200, 200, 200, 0.8) !important;
+    margin-bottom: 0px;
 }
 
-.phone p {
-  font-size: 0.7rem;
+#toWalk .arrow {
+    position: relative;
+    top: 32px;
+    left: 23px;
+    font-size: 15px;
+    color: hsl(0, 0%, 100%);
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-.phone .header {
-  display: flex;
-  position: relative;
-  align-items: center;
-  background: linear-gradient(
-    to left,
-    var(--light-magenta),
-    var(--light-violet)
-  );
-  padding: 2rem 0.5rem 0.5rem 0.5rem;
-  overflow: hidden;
+#avatar {
+    position: relative;
+    top: 12px;
+    left: 35px;
 }
 
-.header .white-square {
-  content: ' ';
-  position: absolute;
-  top: 0;
-  left: 50%;
-  width: 140px;
-  height: 30px;
-  z-index: 2;
-  border-radius: 0.8rem;
-  background: white;
-  transform: translateX(-50%) translateY(-40%);
+#avatar img {
+    display: block;
+    width: 22px;
+    height: auto;
+    border-radius: 100%;
+    border: 1px solid hsl(0, 0%, 100%);
+
 }
 
-.phone .header .user-box .avatar {
-  max-width: 30px;
-}
-.phone .header .user-box p {
-  display: block;
-  color: var(--white);
-  font-weight: 700;
-  line-height: 1.4;
-  font-size: 0.7rem;
-}
-.phone .header .user-box span {
-  display: block;
-  font-weight: 400;
-  font-size: 0.6rem;
-  color: var(--pale-violet);
+#toWalk h2 {
+    position: relative;
+    bottom: 18px;
+    left: 65px;
+    padding-top: 5px;
+    padding-left: 5px;
+    font-size: 12px;
+    color: hsl(0, 0%, 100%);
 }
 
-.phone .header .arrow-icon {
-  display: flex;
-  width: 10%;
+#toWalk p {
+    position: relative;
+    left: 70px;
+    bottom: 18px;
+    font-size: 10px;
+    color: hsl(276, 100%, 81%);
 }
 
-.phone .header .user-box {
-  display: flex;
-  width: 100%;
-  column-gap: 0.5rem;
-}
-.phone .header .dots {
-  width: 10%;
-}
-
-.phone .header .user-box .avatar img {
-  border-radius: 50%;
-  width: 100%;
-  border: 1.5px solid var(--white);
+#toWalk .deg {
+    position: relative;
+    font-size: 15px;
+    top: 75px;
+    left: 220px;
+    color: hsl(0, 0%, 100%);
+    transform: translate(-50%, -50%) rotate(90deg);
 }
 
-.dot {
-  width: 3px;
-  height: 3px;
-  background-color: var(--white);
-  margin: 2px 0;
-  border-radius: 50%;
+#screen .chat1 {
+    position: relative;
+    top: -10px;
+    margin-left: 10px;
+    margin-bottom: 5px;
+    height: auto;
+    width: 130px;
+    color: hsl(276, 55%, 52%);
+    background-color: hsl(0, 0%, 90%);
+    border-radius: 15px 10px 10px 0px;
 }
 
-.phone .phone-body {
-  padding: 0.75rem;
+#screen .chat2 {
+    position: relative;
+    left: 80px;
+    margin-left: 10px;
+    margin-bottom: 5px;
+    height: auto;
+    max-width: 130px;
+    min-width: 80px;
+    color: hsl(271, 15%, 43%);
+    background-color: hsl(0, 0%, 100%);
+    border-radius: 10px 10px 0px 10px;
 }
 
-.box-images {
-  display: flex;
-  column-gap: 0.4rem;
+#screen .p2 {
+    left: 120px;
+    width: 90px !important;
 }
 
-.box-images .box {
-  margin-bottom: 0.5rem;
-  max-width: 45px;
-  max-height: 45px;
+#screen .p3 {
+    top: 0.2px;
 }
 
-.box-images .box img {
-  height: 100%;
-  width: 100%;
-  border-radius: 0.5rem;
+.chat1 p,
+.chat2 p {
+    padding: 10px;
+    font-size: 8px;
 }
 
-.phone .left,
-.phone .right,
-.phone .right.box-images {
-  width: 70%;
-  margin-bottom: 0.5rem;
-  padding: 0.25rem 0.5rem;
-  border-radius: 0.7rem;
-
-  font-size: 0.6rem;
-  line-height: 1.5;
-  box-shadow: 0 10px 4px rgba(0, 0, 0, 0.025);
+#dog {
+    position: relative;
+    left: 90px;
+    margin-bottom: 5px;
 }
 
-.phone .right.box-images {
-  box-shadow: none;
+#dog img {
+    width: 40px;
+    height: auto;
+    border-radius: 10px;
 }
 
-.phone .left {
-  background-color: #ede5f4;
-  color: var(--moderate-violet);
-  float: left;
-  border-bottom-left-radius: 0.3rem;
-}
-.phone .right {
-  background-color: var(--white);
-  color: var(--desaturated-dark-violet);
-  float: right;
-  border-bottom-right-radius: 0.3rem;
+.walk {
+    margin: 5px;
+    height: 33px;
+    width: 160px;
+    background-image: linear-gradient(to right, hsl(293, 100%, 63%), hsl(264, 100%, 61%));
+    border-radius: 10px 10px 10px 0px;
+
 }
 
-.phone .left.option {
-  display: flex;
-  justify-content: left;
-  align-items: center;
-  color: var(--white);
-
-  font-weight: 400;
-  background-image: linear-gradient(
-    to right,
-    var(--light-magenta),
-    var(--light-violet)
-  );
-  border-radius: 7px;
-  border-bottom-left-radius: 3px;
-  width: 90%;
-  padding: 0.4rem 0.75rem;
-  margin: 0.5em 0.5em 0.5em 0;
-  position: relative;
+.walk .circleText {
+    position: relative;
+    top: 10px;
+    left: 10px;
+    height: 10px;
+    width: 10px;
+    border: 0.1px dotted hsl(289, 100%, 72%);
+    border-radius: 100%;
 }
 
-.phone .left.option {
-  color: var(--white);
+.walk p {
+    position: relative;
+    left: 20px;
+    bottom: 12px;
+    padding-top: 10px;
+    margin-left: 10px;
+    margin-bottom: 10px;
+    font-size: 10px;
+    color: #FFBFFF;
 }
 
-.round {
-  content: '';
-  background: transparent;
-  width: 15px;
-  height: 15px;
-  display: block;
-  border-radius: 50%;
-  border: 1px solid var(--white);
-  margin-right: 0.15rem;
-  flex: 0.3;
-  margin-right: 0.5rem;
+.walk .price {
+    position: relative;
+    bottom: 45px;
+    left: 110px;
+    color: hsl(0, 0%, 100%);
+    font-size: 12px;
+    font-weight: bold;
+
 }
 
-.phone .price {
-  font-size: 1rem;
-  font-weight: 700;
-  color: var(--white);
-  justify-self: right;
-  flex: 1;
-  text-align: center;
+#type {
+    position: relative;
+    left: 9px;
+    top: 10px;
+    height: 35px;
+    width: 210px;
+    background-color: hsl(0, 0%, 100%);
+    border-radius: 20px;
 }
 
-.option-text {
-  font-size: 0.6rem;
-  flex: 2;
-}
-.phone .phone-body .right.box-images {
-  background-color: transparent;
-  margin-bottom: 0;
-}
-
-.left.text-placeholder {
-  display: flex;
-  background-color: var(--white);
-  margin-top: 0.5rem;
-  padding: 0.75rem 1.25rem;
-  color: var(--grayish-blue);
-  border-radius: 1rem;
-  width: 100%;
-  justify-content: space-between;
-  position: relative;
+#type p {
+    position: relative;
+    top: 10px;
+    left: 10px;
+    font-size: 10px;
+    color: hsl(206, 6%, 79%);
 }
 
-.arrow-icon-right {
-  display: inline-flex;
-  background-color: var(--very-dark-desaturated-violet);
-  color: var(--white);
-  padding: 0.1rem 0.35rem;
-  border-radius: 50%;
-  font-size: 1rem;
-  font-weight: 700;
-  margin: 0;
-  position: absolute;
-  right: 0.3rem;
-  top: 50%;
-  transform: translateY(-50%);
+#arrowBlack {
+    position: relative;
+    top: -6px;
+    bottom: 5px;
+    left: 175px;
+    height: 25px;
+    width: 25px;
+    border-radius: 100%;
+    background: hsl(271, 36%, 24%);
 }
 
-/* text-part */
-.text-part {
-  text-align: center;
-}
-h1 {
-  color: var(--very-dark-desaturated-violet);
-  margin: 3rem 0 1.5rem;
-  font-size: 2.5rem;
-  font-weight: 500;
+#arrowBlack p {
+    position: relative;
+    left: 1px;
+    text-align: center;
+    top: 1px;
+    font-size: 18px;
+    font-weight: bold;
+    color: hsl(0, 0%, 100%);
+    font-family: fantasy;
+
 }
 
-p {
-  color: var(--dark-grayish-violet);
-  line-height: 1.6;
-  font-size: 1.1rem;
+
+/*CENTRO*/
+#center {
+    height: 200px;
+    width: 470px;
+    position: absolute;
+    background-color: transparent;
+    bottom: 290px;
+    /*top: -130px;*/
+    left: 735px;
+    z-index: 1;
+}
+
+#center h1 {
+    font-size: 39px;
+    color: hsl(271, 36%, 24%);
+    margin-bottom: 25px;
+    letter-spacing: 1px;
+    font-weight: bold;
+}
+
+#center p {
+    line-height: 26px;
+    font-size: 15px;
+    color: hsl(270, 7%, 64%);
+    letter-spacing: 1px;
 }
 
 .attribution {
-  display: none;
+    position: relative;
+    top: 270px;
 }
 
-@media screen and (min-width: 768px) {
-  .container {
-    align-items: center;
-    max-width: 1024px;
-    flex-direction: row;
-    column-gap: 8rem;
-  }
-
-  .text-part {
-    text-align: left;
-  }
-
-  .nice-background {
-    width: 30vw;
-    border-bottom-left-radius: 400px;
-    border-bottom-right-radius: 400px;
-    height: 55rem;
-  }
+.rec_radR {
+    position: absolute;
+    background-image: linear-gradient(hsl(264, 33%, 97%), hsl(290, 43%, 97%));
+    top: 114px;
+    right: -1px;
+    height: 700px;
+    width: 303px;
+    border-radius: 400px 0px 0px 0px;
 }
 
-@media screen and (min-width: 1024px) {
+
+
+/*Responsive*/
+
+@media(max-width: 1398px) {
+
+    #content {
+        width: 1398px;
+        height: 800px;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        background-color: hsl(0, 0%, 100%);
+        justify-content: space-between;
+    }
+
+
+    .rec_radL {
+        position: absolute;
+        left: -69px;
+        height: 700px;
+        width: 490px;
+
+    }
+
+    .rec_radR {
+        position: absolute;
+        top: 114px;
+        right: -1px;
+        height: 700px;
+        width: 303px;
+        margin-bottom: 0px;
+    }
+}
+
+@media(max-width: 1200px) {
+
+
+    #content {
+        margin-bottom: 0px;
+        height: 800px !important;
+
+    }
+
+    #center {
+        background-color: transparent;
+        top: 310px;
+        left: 650px;
+        z-index: 1;
+
+    }
+
+    #phone {
+        left: 263px;
+
+    }
+
+    .rec_radL {
+        left: -170px;
+
+    }
+
+    .rec_radR {
+        right: 10px;
+    }
+}
+
+
+@media(max-width: 1120px) {
+
+    #center {
+        position: absolute;
+        background-color: transparent;
+        top: 310px;
+        left: 550px;
+        z-index: 1;
+        margin-bottom: 50px;
+    }
+
+    #phone {
+        left: 203px;
+
+    }
+
+    .rec_radL {
+        left: -150px;
+
+    }
+
+    .rec_radR {
+        right: 10px;
+    }
+
+    .attribution {
+        position: relative;
+        right: 110px;
+    }
+}
+
+
+
+@media(max-width: 1020px) {
+
+    #center {
+        height: 300px;
+        width: 420px;
+        position: absolute;
+        background-color: transparent;
+        top: 310px;
+        left: 550px;
+        z-index: 1;
+        margin-bottom: 50px;
+    }
+
+}
+
+
+@media(max-width: 980px) {
+
+    #center {
+        height: 300px;
+        width: 320px;
+        position: absolute;
+    }
+
+    .rec_radL {
+        left: -270px;
+        height: 500px;
+
+    }
+
+    #phone {
+        top: 80px;
+        left: 63px;
+    }
+
+    .rec_radR {
+        display: none;
+    }
+}
+
+
+@media(max-width: 890px) {
+
+    #center {
+        top: 310px;
+        left: 470px;
+        position: absolute;
+    }
+
+    .rec_radL {
+        left: -270px;
+        height: 500px;
+
+    }
+
+    #phone {
+        top: 80px;
+        left: 63px;
+    }
+
+    .attribution {
+        position: relative;
+        right: 80px;
+    }
+
+    .rec_radR {
+        display: none;
+    }
+}
+
+
+
+/*Kindle*/
+
+@media(max-width: 800px) {
+
+
+    #phone {
+        left: 303px;
+        top: 250px;
+    }
+
+    .rec_radL {
+        height: 700px;
+        width: 490px;
+        position: absolute;
+        left: -69px;
+        height: 700px;
+        width: 490px;
+
+    }
+
+    #center {
+        height: 300px;
+        width: 440px;
+        position: absolute;
+        background-color: transparent;
+        top: 950px;
+        /*top: -130px;*/
+        left: 170px;
+        text-align: center;
+        z-index: 1;
+        margin-bottom: 50px;
+    }
+
+    .rec_radR {
+        display: none;
+    }
+
+
+    .attribution {
+        position: relative;
+        top: 750px;
+        right: 340px;
+    }
+
+    .rec_radR {
+        display: none;
+    }
+}
+
+@media(max-width: 785px) {
+
+    #center {
+        top: 310px;
+        left: 370px;
+        position: absolute;
+    }
+
+    .rec_radR {
+        display: none;
+    }
+}
+
+
+
+@media(max-width: 784px) {
+
+   
+    #phone {
+        left: 303px;
+        top: 250px;
+    }
+
+    .rec_radL {
+        height: 700px;
+        width: 490px;
+        position: absolute;
+       left: -69px;
+        height: 700px;
+        width: 490px;
+       
+    }
     
-  .nice-background-2 {
-    display: block;
-    position: fixed;
-    right: 0;
-    left: inherit;
-    bottom: 0;
-    top: inherit;
-    background: hsl(264, 33%, 97%);
-    border-bottom-left-radius: 0;
-    border-bottom-right-radius: 0;
-    border-top-right-radius: 500px;
-    border-top-left-radius: 500px;
-    width: 40vw;
-    z-index: -2;
-    margin-right: -10%;
-  }
+    #center {
+        height: 300px;
+        width: 440px;
+        position: absolute;
+        background-color: transparent;
+        top: 950px;
+        /*top: -130px;*/
+        left: 170px;
+        text-align: center;
+        z-index: 1;
+        margin-bottom: 50px;
+    }
+       .rec_radR {
+       display: none;
+    }
 
-  .nice-background{
-    border-bottom-right-radius: 150rem;
-    border-bottom-left-radius: 100rem;
-  }
 
+    .attribution {
+        position: relative;
+        top: 750px;
+        right: 340px;
+    }
+
+    .rec_radR {
+        display: none;
+    }
+}
+
+/*ipad*/
+@media(max-width: 768px) {
+
+
+    #phone {
+        left: 303px;
+        top: 250px;
+    }
+
+    .rec_radL {
+        height: 700px;
+        width: 490px;
+        position: absolute;
+        left: -69px;
+        height: 700px;
+        width: 490px;
+
+    }
+
+    #center {
+        height: 300px;
+        width: 440px;
+        position: absolute;
+        background-color: transparent;
+        top: 950px;
+        /*top: -130px;*/
+        left: 170px;
+        text-align: center;
+        z-index: 1;
+        margin-bottom: 50px;
+    }
+
+    .rec_radR {
+        display: none;
+    }
+
+
+    .attribution {
+        position: relative;
+        top: 750px;
+        right: 340px;
+    }
+
+    .rec_radR {
+        display: none;
+    }
+}
+
+
+@media(max-width: 614px) {
+    #center {
+        height: 300px;
+        width: 420px;
+        position: absolute;
+        background-color: transparent;
+        top: 850px;
+        /*top: -130px;*/
+        left: 120px;
+        text-align: center;
+        z-index: 1;
+        margin-bottom: 50px;
+    }
+
+    .attribution {
+        position: relative;
+        top: 650px;
+        right: 410px;
+    }
+
+    .rec_radR {
+        display: none;
+    }
+}
+
+@media(max-width: 568px){
+    #content {
+        max-width: 568px;
+        height: auto;
+        overflow-x: hidden;
+
+
+    }
+
+    .rec_radL {
+        left: -270px;
+        height: 500px;
+
+    }
+
+    #phone {
+        top: 80px;
+        left: 93px;
+    }
+
+    #center {
+        height: 300px;
+        width: 340px;
+        position: absolute;
+        background-color: transparent;
+        top: 650px;
+        /*top: -130px;*/
+        left: 100px;
+        text-align: center;
+        z-index: 1;
+        margin-bottom: 50px;
+    }
+
+    .attribution {
+        position: relative;
+        top: 450px;
+        right: 450px;
+    }
+
+    .rec_radR {
+        display: none;
+    }
+}
+@media(max-width: 415px) {
+
+    .rec_radL {
+        left: -270px;
+        height: 500px;
+
+    }
+
+    #phone {
+        top: 80px;
+        left: 63px;
+    }
+
+    #center {
+        height: 300px;
+        width: 340px;
+        position: absolute;
+        background-color: transparent;
+        top: 650px;
+        /*top: -130px;*/
+        left: 45px;
+        text-align: center;
+        z-index: 1;
+        margin-bottom: 50px;
+    }
+
+    .attribution {
+        position: relative;
+        top: 450px;
+        right: 510px;
+    }
+
+    .rec_radR {
+        display: none;
+    }
+}
+
+@media(max-width: 375px) {
+    #content {
+        height: auto;
+        overflow-x: hidden;
+
+    }
+
+    .rec_radL {
+        left: -270px;
+        height: 500px;
+
+    }
+
+    #phone {
+        top: 80px;
+        left: 63px;
+    }
+
+    #center {
+        height: 300px;
+        width: 340px;
+        position: absolute;
+        background-color: transparent;
+        top: 650px;
+        /*top: -130px;*/
+        left: 15px;
+        text-align: center;
+        z-index: 1;
+        margin-bottom: 50px;
+    }
+
+    .attribution {
+        position: relative;
+        top: 450px;
+        right: 10px;
+    }
+
+    .rec_radR {
+        display: none;
+    }
 }
