--- a/style.css
+++ b/style.css
@@ -1,13 +1,10 @@
+/* Reset */
 * {
     margin: 0;
     padding: 0;
     font-family: 'Rubik', sans-serif;
-    /* max-height: 800px; */
 }
 
-body{
-  
-}
 
 #content {
     width: 100%;
@@ -214,7 +211,6 @@ body{
     color: hsl(0, 0%, 100%);
     font-size: 12px;
     font-weight: bold;
-
 }
 
 #type {
@@ -266,7 +262,6 @@ body{
     position: absolute;
     background-color: transparent;
     bottom: 290px;
-    /*top: -130px;*/
     left: 735px;
     z-index: 1;
 }
