--- a/style.css
+++ b/style.css
@@ -1,778 +1,277 @@
-/* Reset */
+/* reset */
 * {
-    margin: 0;
-    padding: 0;
-    font-family: 'Rubik', sans-serif;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+/* base styles */
+body {
+  background-color: hsl(270, 20%, 96%);
+  display: grid;
+  width: 100%;
+  grid-template-columns: 14% 9% 5% 14% 14% 22% 9% 14%;
+  grid-template-rows: 14% 14% 14% 14% 30% 14%;
+  grid-area: auto;
+  font-size: 16px;
+  font-family: 'Rubik', sans-serif;
 }
 
-
-#content {
-    width: 100%;
-    height: 800px;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-color: hsl(0, 0%, 100%);
-    justify-content: space-between;
-    overflow: hidden;
+img {
+  width: 35px;
+  height: auto;
+  border-radius: 10px;
 }
 
-
-.rec_radL {
-    position: absolute;
-    background-image: linear-gradient(hsl(293, 100%, 63%), hsl(264, 100%, 61%));
-    left: -69px;
-    height: 700px;
-    width: 490px;
-    border-radius: 0px 0px 400px 400px;
+.phone {
+  height: 500px;
+  width: 230px;
+  padding: 7px;
+  background-color: white;
+  border-radius: 35px;
+  grid-column-start: 3;
+  grid-row-start: 2;
+  position: relative;
+  box-shadow:5px 5px 30px rgb(110, 109, 109);
+  /* position: sticky;
+  left: 80px;
+  top: 200px; */
 }
 
-/*Phone*/
-#phone {
-    top: 150px;
-    left: 363px;
-    position: relative;
-    height: 490px;
-    width: 230px;
-    border: 10px solid hsl(0, 0%, 100%);
-    border-radius: 30px;
-    box-shadow: 18px 10px 70px hsl(268, 16%, 84%);
-    z-index: 1;
+.inside {
+  background-color: hsl(270, 20%, 96%);
+  height: 420px;
+  border-bottom-left-radius: 30px;
+  border-bottom-right-radius: 30px;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
 }
 
-#phone>#screen {
-    background-color: hsl(270, 20%, 96%);
-    height: 490px;
-    width: 231px;
-    border-radius: 20px;
+.top {
+  width: 100%;
+  height: 60px;
+  background-color: hsl(276, 100%, 81%);
+  background-image: linear-gradient(to left, hsl(293, 100%, 63%), hsl(264, 100%, 61%));
+  border-top-left-radius:30px ;
+  border-top-right-radius: 30px;
+  padding: 15px;
+  padding-top: 0;
+  margin-top: 0;
+  padding-bottom: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  color: white;
 }
 
-#screen>#camFront {
-    position: relative;
-    bottom: 9px;
-    left: 54px;
-    width: 132px;
-    height: 28px;
-    background-color: hsl(0, 0%, 100%);
-    z-index: 1;
-    border-radius: 20px;
+.top p, .textarea p {
+  color: hsl(270, 7%, 64%);
 }
 
-#toWalk {
-    position: relative;
-    bottom: 29px;
-    background-image: linear-gradient(to right, hsl(264, 100%, 61%), hsl(293, 100%, 63%));
-    height: 65px;
-    width: 231px;
-    border-radius: 20px 20px 0px 0px;
-    box-shadow: 0px 2px 10px rgba(200, 200, 200, 0.8) !important;
-    margin-bottom: 0px;
+.space {
+  width: 100px;
+  height: 25px;
+  margin-top: 0;
+  margin-left: 40px;
+  background-color: white;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
 }
 
-#toWalk .arrow {
-    position: relative;
-    top: 32px;
-    left: 23px;
-    font-size: 15px;
-    color: hsl(0, 0%, 100%);
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+.top > div {
+  display: flex;
 }
 
-#avatar {
-    position: relative;
-    top: 12px;
-    left: 35px;
+.content {
+  height: 60px;
 }
 
-#avatar img {
-    display: block;
-    width: 22px;
-    height: auto;
-    border-radius: 100%;
-    border: 1px solid hsl(0, 0%, 100%);
-
+.name {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: 160px;
 }
 
-#toWalk h2 {
-    position: relative;
-    bottom: 18px;
-    left: 65px;
-    padding-top: 5px;
-    padding-left: 5px;
-    font-size: 12px;
-    color: hsl(0, 0%, 100%);
+.top img {
+  width: 25px;
+  border: 2px solid white;
+  border-radius: 25px;
 }
 
-#toWalk p {
-    position: relative;
-    left: 70px;
-    bottom: 18px;
-    font-size: 10px;
-    color: hsl(276, 100%, 81%);
+.dot {
+  height: 30px;
+  margin-left: 50px;
+  margin-top: 8px;
 }
 
-#toWalk .deg {
-    position: relative;
-    font-size: 15px;
-    top: 75px;
-    left: 220px;
-    color: hsl(0, 0%, 100%);
-    transform: translate(-50%, -50%) rotate(90deg);
+.dot div {
+  height: 4px;
 }
 
-#screen .chat1 {
-    position: relative;
-    top: -10px;
-    margin-left: 10px;
-    margin-bottom: 5px;
-    height: auto;
-    width: 130px;
-    color: hsl(276, 55%, 52%);
-    background-color: hsl(0, 0%, 90%);
-    border-radius: 15px 10px 10px 0px;
+h1 {
+  font-size: 0.8rem;
+  font-weight: 00;
 }
 
-#screen .chat2 {
-    position: relative;
-    left: 80px;
-    margin-left: 10px;
-    margin-bottom: 5px;
-    height: auto;
-    max-width: 130px;
-    min-width: 80px;
-    color: hsl(271, 15%, 43%);
-    background-color: hsl(0, 0%, 100%);
-    border-radius: 10px 10px 0px 10px;
+p{
+  font-size: 0.5rem;
 }
 
-#screen .p2 {
-    left: 120px;
-    width: 90px !important;
+.sender {
+  width: 115px;
+  padding: 8px;
+  background-color: hsl(272, 38%, 91%);
+  color: hsl(276, 55%, 52%);
+  margin-bottom: 7px;
+  border-radius: 12px;
+  border-bottom-left-radius: 5px;
 }
 
-#screen .p3 {
-    top: 0.2px;
+.receiver {
+  width: auto;
+  padding: 8px;
+  background-color: white;
+  color: black;
+  border-radius: 12px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 5px;
+  margin-bottom: 7px;
 }
 
-.chat1 p,
-.chat2 p {
-    padding: 10px;
-    font-size: 8px;
+#two {
+  margin-left: 35px; 
 }
 
-#dog {
-    position: relative;
-    left: 90px;
-    margin-bottom: 5px;
+.right {
+  margin: 10px 0;
+  margin-left: 75px;
 }
 
-#dog img {
-    width: 40px;
-    height: auto;
-    border-radius: 10px;
+.bottom {
+  background-image: linear-gradient(to right, hsl(293, 100%, 63%), hsl(264, 100%, 61%));
+  width: 170px;
+  height: 35px;
+  margin-top: 7px;
+  border-radius: 12px;
+  border-bottom-left-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  padding: 7px;
+  color: white;
 }
 
-.walk {
-    margin: 5px;
-    height: 33px;
-    width: 160px;
-    background-image: linear-gradient(to right, hsl(293, 100%, 63%), hsl(264, 100%, 61%));
-    border-radius: 10px 10px 10px 0px;
-
+.bottom div {
+  display: flex;
+  align-items: center;
+  width: 150px;
 }
 
-.walk .circleText {
-    position: relative;
-    top: 10px;
-    left: 10px;
-    height: 10px;
-    width: 10px;
-    border: 0.1px dotted hsl(289, 100%, 72%);
-    border-radius: 100%;
+.bottom section {
+  width: 20px;
+  height: 20px;
+  border: 1px solid rgb(231, 224, 224);
+  border-radius: 30px;
+  margin-right: 10px;
 }
 
-.walk p {
-    position: relative;
-    left: 20px;
-    bottom: 12px;
-    padding-top: 10px;
-    margin-left: 10px;
-    margin-bottom: 10px;
-    font-size: 10px;
-    color: #FFBFFF;
+span{
+  font-size: 1.2rem;
+  font-weight: 700;
 }
 
-.walk .price {
-    position: relative;
-    bottom: 45px;
-    left: 110px;
-    color: hsl(0, 0%, 100%);
-    font-size: 12px;
-    font-weight: bold;
+.textarea {
+  width: 100%;
+  height: 35px;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  border-radius: 30px;
+  padding-left: 20px;
+  margin-top: 15px;
+} 
+
+.textarea section {
+  width: 30px;
+  height: 30px;
+  border-radius: 40px;
+  background-color: black;
+  color: white;
+  font-weight: 1000;
+  padding: 6px;
+  text-align: center;
+  margin-left: 85px;
 }
 
-#type {
-    position: relative;
-    left: 9px;
-    top: 10px;
-    height: 35px;
-    width: 210px;
-    background-color: hsl(0, 0%, 100%);
-    border-radius: 20px;
+.extra {
+  text-align: start;
+  grid-column-start: 6;
+  grid-column-end: 8;
+  grid-row-start: 3;
+  margin-bottom: 30px;
+}
+.extra h1 {
+  color: hsl(271, 36%, 24%);
+  margin: 3rem 0 1.5rem;
+  font-size: 1.8rem;
+  font-weight: 500;
 }
 
-#type p {
-    position: relative;
-    top: 10px;
-    left: 10px;
-    font-size: 10px;
-    color: hsl(206, 6%, 79%);
+.extra p {
+  color: hsl(206, 6%, 79%);
+  line-height: 1.6;
+  font-size: 0.8rem;
 }
 
-#arrowBlack {
-    position: relative;
-    top: -6px;
-    bottom: 5px;
-    left: 175px;
-    height: 25px;
-    width: 25px;
-    border-radius: 100%;
-    background: hsl(271, 36%, 24%);
+.purple {
+  background-color: hsl(276, 93%, 72%);
+  /* position:absolute; */
+  grid-column-start: 1;
+  grid-column-end: 4;
+  grid-row-start: 1;
+  grid-row-end: 6;
+  left: 0;
+  top: 0;
+  bottom: 100px;
+  border-bottom-left-radius: 200px;
+  border-bottom-right-radius: 200px;
+} 
+.ash {
+  background-color: hsl(300, 8%, 93%);
+  grid-column-start: 7;
+  grid-column-end: 9;
+  grid-row-start: 2;
+  grid-row-end: 7;
+  border-top-left-radius: 300px;
 }
+/* fonts */
+/* mobile styles */
+/* tablet styles */
+@media (max-width:750px) {
+  body {
+    grid-template-columns: 14% 9% 5% 14% 14% 22% 9% 14%;
+    grid-template-rows: 7% 14% 14% 14% 20% 14% 17%;
+  }
 
-#arrowBlack p {
-    position: relative;
-    left: 1px;
+  .purple {
+    grid-row-end: 5;
+    border-bottom-left-radius: 0;
+  }
+
+  .extra {
     text-align: center;
-    top: 1px;
-    font-size: 18px;
-    font-weight: bold;
-    color: hsl(0, 0%, 100%);
-    font-family: fantasy;
+    grid-column-start: 3;
+    grid-column-end: 7;
+    grid-row-start: 7;
+    grid-row-end: 9;
+  }
 
+  .ash {
+    grid-column-start: 5;
+    grid-row-start: 5;
+    grid-row-end: 9;
+  }
 }
-
-
-/*CENTRO*/
-#center {
-    height: 200px;
-    width: 470px;
-    position: absolute;
-    background-color: transparent;
-    bottom: 290px;
-    left: 735px;
-    z-index: 1;
-}
-
-#center h1 {
-    font-size: 39px;
-    color: hsl(271, 36%, 24%);
-    margin-bottom: 25px;
-    letter-spacing: 1px;
-    font-weight: bold;
-}
-
-#center p {
-    line-height: 26px;
-    font-size: 15px;
-    color: hsl(270, 7%, 64%);
-    letter-spacing: 1px;
-}
-
-.attribution {
-    position: relative;
-    top: 270px;
-}
-
-.rec_radR {
-    position: absolute;
-    background-image: linear-gradient(hsl(264, 33%, 97%), hsl(290, 43%, 97%));
-    top: 114px;
-    right: -1px;
-    height: 700px;
-    width: 303px;
-    border-radius: 400px 0px 0px 0px;
-}
-
-
-
-/*Responsive*/
-
-@media(max-width: 1398px) {
-
-    #content {
-        width: 1398px;
-        height: 800px;
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        background-color: hsl(0, 0%, 100%);
-        justify-content: space-between;
-    }
-
-
-    .rec_radL {
-        position: absolute;
-        left: -69px;
-        height: 700px;
-        width: 490px;
-
-    }
-
-    .rec_radR {
-        position: absolute;
-        top: 114px;
-        right: -1px;
-        height: 700px;
-        width: 303px;
-        margin-bottom: 0px;
-    }
-}
-
-@media(max-width: 1200px) {
-
-
-    #content {
-        margin-bottom: 0px;
-        height: 800px !important;
-
-    }
-
-    #center {
-        background-color: transparent;
-        top: 310px;
-        left: 650px;
-        z-index: 1;
-
-    }
-
-    #phone {
-        left: 263px;
-
-    }
-
-    .rec_radL {
-        left: -170px;
-
-    }
-
-    .rec_radR {
-        right: 10px;
-    }
-}
-
-
-@media(max-width: 1120px) {
-
-    #center {
-        position: absolute;
-        background-color: transparent;
-        top: 310px;
-        left: 550px;
-        z-index: 1;
-        margin-bottom: 50px;
-    }
-
-    #phone {
-        left: 203px;
-
-    }
-
-    .rec_radL {
-        left: -150px;
-
-    }
-
-    .rec_radR {
-        right: 10px;
-    }
-
-    .attribution {
-        position: relative;
-        right: 110px;
-    }
-}
-
-
-
-@media(max-width: 1020px) {
-
-    #center {
-        height: 300px;
-        width: 420px;
-        position: absolute;
-        background-color: transparent;
-        top: 310px;
-        left: 550px;
-        z-index: 1;
-        margin-bottom: 50px;
-    }
-
-}
-
-
-@media(max-width: 980px) {
-
-    #center {
-        height: 300px;
-        width: 320px;
-        position: absolute;
-    }
-
-    .rec_radL {
-        left: -270px;
-        height: 500px;
-
-    }
-
-    #phone {
-        top: 80px;
-        left: 63px;
-    }
-
-    .rec_radR {
-        display: none;
-    }
-}
-
-
-@media(max-width: 890px) {
-
-    #center {
-        top: 310px;
-        left: 470px;
-        position: absolute;
-    }
-
-    .rec_radL {
-        left: -270px;
-        height: 500px;
-
-    }
-
-    #phone {
-        top: 80px;
-        left: 63px;
-    }
-
-    .attribution {
-        position: relative;
-        right: 80px;
-    }
-
-    .rec_radR {
-        display: none;
-    }
-}
-
-
-
-/*Kindle*/
-
-@media(max-width: 800px) {
-
-
-    #phone {
-        left: 303px;
-        top: 250px;
-    }
-
-    .rec_radL {
-        height: 700px;
-        width: 490px;
-        position: absolute;
-        left: -69px;
-        height: 700px;
-        width: 490px;
-
-    }
-
-    #center {
-        height: 300px;
-        width: 440px;
-        position: absolute;
-        background-color: transparent;
-        top: 950px;
-        /*top: -130px;*/
-        left: 170px;
-        text-align: center;
-        z-index: 1;
-        margin-bottom: 50px;
-    }
-
-    .rec_radR {
-        display: none;
-    }
-
-
-    .attribution {
-        position: relative;
-        top: 750px;
-        right: 340px;
-    }
-
-    .rec_radR {
-        display: none;
-    }
-}
-
-@media(max-width: 785px) {
-
-    #center {
-        top: 310px;
-        left: 370px;
-        position: absolute;
-    }
-
-    .rec_radR {
-        display: none;
-    }
-}
-
-
-
-@media(max-width: 784px) {
-
-   
-    #phone {
-        left: 303px;
-        top: 250px;
-    }
-
-    .rec_radL {
-        height: 700px;
-        width: 490px;
-        position: absolute;
-       left: -69px;
-        height: 700px;
-        width: 490px;
-       
-    }
-    
-    #center {
-        height: 300px;
-        width: 440px;
-        position: absolute;
-        background-color: transparent;
-        top: 950px;
-        /*top: -130px;*/
-        left: 170px;
-        text-align: center;
-        z-index: 1;
-        margin-bottom: 50px;
-    }
-       .rec_radR {
-       display: none;
-    }
-
-
-    .attribution {
-        position: relative;
-        top: 750px;
-        right: 340px;
-    }
-
-    .rec_radR {
-        display: none;
-    }
-}
-
-/*ipad*/
-@media(max-width: 768px) {
-
-
-    #phone {
-        left: 303px;
-        top: 250px;
-    }
-
-    .rec_radL {
-        height: 700px;
-        width: 490px;
-        position: absolute;
-        left: -69px;
-        height: 700px;
-        width: 490px;
-
-    }
-
-    #center {
-        height: 300px;
-        width: 440px;
-        position: absolute;
-        background-color: transparent;
-        top: 950px;
-        /*top: -130px;*/
-        left: 170px;
-        text-align: center;
-        z-index: 1;
-        margin-bottom: 50px;
-    }
-
-    .rec_radR {
-        display: none;
-    }
-
-
-    .attribution {
-        position: relative;
-        top: 750px;
-        right: 340px;
-    }
-
-    .rec_radR {
-        display: none;
-    }
-}
-
-
-@media(max-width: 614px) {
-    #center {
-        height: 300px;
-        width: 420px;
-        position: absolute;
-        background-color: transparent;
-        top: 850px;
-        /*top: -130px;*/
-        left: 120px;
-        text-align: center;
-        z-index: 1;
-        margin-bottom: 50px;
-    }
-
-    .attribution {
-        position: relative;
-        top: 650px;
-        right: 410px;
-    }
-
-    .rec_radR {
-        display: none;
-    }
-}
-
-@media(max-width: 568px){
-    #content {
-        max-width: 568px;
-        height: auto;
-        overflow-x: hidden;
-
-
-    }
-
-    .rec_radL {
-        left: -270px;
-        height: 500px;
-
-    }
-
-    #phone {
-        top: 80px;
-        left: 93px;
-    }
-
-    #center {
-        height: 300px;
-        width: 340px;
-        position: absolute;
-        background-color: transparent;
-        top: 650px;
-        /*top: -130px;*/
-        left: 100px;
-        text-align: center;
-        z-index: 1;
-        margin-bottom: 50px;
-    }
-
-    .attribution {
-        position: relative;
-        top: 450px;
-        right: 450px;
-    }
-
-    .rec_radR {
-        display: none;
-    }
-}
-@media(max-width: 415px) {
-
-    .rec_radL {
-        left: -270px;
-        height: 500px;
-
-    }
-
-    #phone {
-        top: 80px;
-        left: 63px;
-    }
-
-    #center {
-        height: 300px;
-        width: 340px;
-        position: absolute;
-        background-color: transparent;
-        top: 650px;
-        /*top: -130px;*/
-        left: 45px;
-        text-align: center;
-        z-index: 1;
-        margin-bottom: 50px;
-    }
-
-    .attribution {
-        position: relative;
-        top: 450px;
-        right: 510px;
-    }
-
-    .rec_radR {
-        display: none;
-    }
-}
-
-@media(max-width: 375px) {
-    #content {
-        height: auto;
-        overflow-x: hidden;
-
-    }
-
-    .rec_radL {
-        left: -270px;
-        height: 500px;
-
-    }
-
-    #phone {
-        top: 80px;
-        left: 63px;
-    }
-
-    #center {
-        height: 300px;
-        width: 340px;
-        position: absolute;
-        background-color: transparent;
-        top: 650px;
-        /*top: -130px;*/
-        left: 15px;
-        text-align: center;
-        z-index: 1;
-        margin-bottom: 50px;
-    }
-
-    .attribution {
-        position: relative;
-        top: 450px;
-        right: 10px;
-    }
-
-    .rec_radR {
-        display: none;
-    }
-}
+/* desktop styles  */
